  Additional changes to support 'liveOutput' (visible in Dashboard) and 'showProgress' (visible in JSP) from all builders. See CC-911 for details.
* Add a JMX operation that passes additional properties to a build (CC-909). Based on Patch by Ivan "Rambius" Ivanov and Antoine Levy Lambert.

AntBuilder
----------------------
* Fix possible build failure due to NPE in AntOutputLogger (CC-913). Patch by Ivan "Rambius" Ivanov.

CMSynergyBaselinePublisher
----------------------
* Allow property resolution in build attribute (CC-973).

EmailPublisher
----------------------
* Add support for sending build notification emails without requiring an SMTP relay server (CC-981). Patch by Kent R. Spillner.
* Add default buildresultsurl attribute on email publishers (CC-982). Patch by Kent R. Spillner.

Harvest
----------------------
* Improvements to AllFusionHarvest integration to support promotion/demotion of versions and additional properties (CC-808). Patch by Robert Thornburrow and David Letcher.

LinkEmailPublisher
----------------------
* LinkEmailPublisher outputs links which do not work with the new dashboard (CC-809). Patch by Robert Thornburrow.

Maven2Builder
----------------------
* Add showBuildOutput property to show builder output in Dashboard while build is executing (CC-966). Patch by Jeff Johnson. Tested by Paolo D'Apice. 
  This is affected by the addition of the 'LiveOutput' attribute to the base Builder class, therefore 'setShowBuildOutput' is actually deprecated, and 'setLiveOutput' should be used instead. See CC-911 for details.

Dashboard
======================
* Add guard for NPE in BuildLoopQueryService, as per comment in CC-831. Suggested by David Williams.
* Change dashboard 'start.jetty.server' target to use /tmp under MacOS Snow Leopard, avoiding 'path with characters' error (CC-976). Patch by Antoine Levy Lambert. 

reporting jsp app
======================
* Show CruiseControl version string (if available) on index and main jsp pages.