@@ -15,6 +15,7 @@ build loop
 * BuildOutputLogger with multiple builds interfere with each other with multiple threads (CC-911). Patch by Grzegorz Olędzki. 
   Additional changes to support 'liveOutput' (visible in Dashboard) and 'showProgress' (visible in JSP) from all builders. See CC-911 for details.
 * Add a JMX operation that passes additional properties to a build (CC-909). Based on Patch by Ivan "Rambius" Ivanov and Antoine Levy Lambert.
+* Add parameter names and descriptions to the jmx operations (CC-1000). Patch by Antonio Gonzalez.
 
 AntBuilder
 ----------------------
